Update 'll4prjd1k-java-quarkus' component image to: quay.io/quay_xjiang/rhtap-qe-java-quarkus:b234c138124aedf2a9326522d46e5f87e2f8cf2c@sha256:5781f8f8ed2a39c07f5c3110c119f3bd10de0948d52588cc6c512c942525c40d

--- a/components/ll4prjd1k-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/ll4prjd1k-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ll4prjd1k-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/quay_xjiang/rhtap-qe-java-quarkus:b234c138124aedf2a9326522d46e5f87e2f8cf2c@sha256:5781f8f8ed2a39c07f5c3110c119f3bd10de0948d52588cc6c512c942525c40d
+          name: container-image
